--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
           pytest -v --cov=src --cov-report=term-missing --cov-report=xml
         env:
           QUEUE_URL: https://sqs.us-east-1.amazonaws.com/123456789012/dummy-queue.fifo
+          AWS_DEFAULT_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: testing
+          AWS_SECRET_ACCESS_KEY: testing
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v4
@@ -99,6 +102,9 @@ jobs:
           pytest --cov=src --cov-report=term-missing
         env:
           QUEUE_URL: https://sqs.us-east-1.amazonaws.com/123456789012/dummy-queue.fifo
+          AWS_DEFAULT_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: testing
+          AWS_SECRET_ACCESS_KEY: testing
 
       - name: Comment PR with coverage
         uses: py-cov-action/python-coverage-comment-action@v3
